vehicle/tests/golden/error/other-verifier/quantifiedVectorNat/quantifiedVectorNat.vcl
@property
f : Bool
f = forall (x : Vector Nat 2) . x ! 0 >= 0
